--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,15 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<app-navbar/>
-<app-user/>
+<header>
+    <app-navbar/>
+</header>
+<main>
+    <app-user/>
+</main>
+<footer>
+    <app-user/>
+</footer>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
